Return results from yahoo finance to find stock ticker from name